--- a/web/index.html
+++ b/web/index.html
@@ -13,9 +13,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport"
     content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <link rel="icon" href="/web/favicon.ico">
+  <link rel="icon" href="/demo/web/favicon.ico">
   <title></title>
-<link href="/web/js/app.js" rel="preload" as="script"></head>
+<link href="/demo/web/js/app.js" rel="preload" as="script"></head>
 
 <body>
   <noscript>
@@ -24,6 +24,6 @@
   </noscript>
   <div id="app"></div>
   <!-- built files will be auto injected -->
-<script type="text/javascript" src="/web/js/app.js"></script></body>
+<script type="text/javascript" src="/demo/web/js/app.js"></script></body>
 
 </html>
