--- a/web/index.html
+++ b/web/index.html
@@ -1,29 +1,1 @@
-<!--
- * @Author: lbt666 1319451895@qq.com
- * @Date: 2022-06-23 14:24:00
- * @LastEditors: lbt666 1319451895@qq.com
- * @LastEditTime: 2022-06-23 14:33:51
- * @Description: 
--->
-<!DOCTYPE html>
-<html lang="">
-
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport"
-    content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <link rel="icon" href="/demo/web/favicon.ico">
-  <title></title>
-<link href="/demo/web/js/app.js" rel="preload" as="script"></head>
-
-<body>
-  <noscript>
-    <strong>We're sorry but web3 doesn't work properly without JavaScript enabled.
-        Please enable it to continue.</strong>
-  </noscript>
-  <div id="app"></div>
-  <!-- built files will be auto injected -->
-<script type="text/javascript" src="/demo/web/js/app.js"></script></body>
-
-</html>
+<!DOCTYPE html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"><link rel="icon" href="/demo/web/favicon.ico"><title></title><link href="/demo/web/css/chunk-3724552c.b8dbd260.css" rel="prefetch"><link href="/demo/web/css/chunk-51d0cb0f.c5d9af0e.css" rel="prefetch"><link href="/demo/web/css/chunk-6604b47e.22ceee57.css" rel="prefetch"><link href="/demo/web/css/chunk-a63e9cea.77758753.css" rel="prefetch"><link href="/demo/web/js/chunk-3724552c.6636e7f9.js" rel="prefetch"><link href="/demo/web/js/chunk-42fd0608.89c770e4.js" rel="prefetch"><link href="/demo/web/js/chunk-51d0cb0f.900b9a00.js" rel="prefetch"><link href="/demo/web/js/chunk-6604b47e.e88ae5de.js" rel="prefetch"><link href="/demo/web/js/chunk-a63e9cea.de5d0975.js" rel="prefetch"><link href="/demo/web/css/app.d5efa62c.css" rel="preload" as="style"><link href="/demo/web/css/chunk-vendors.331f546b.css" rel="preload" as="style"><link href="/demo/web/js/app.1be14c7c.js" rel="preload" as="script"><link href="/demo/web/js/chunk-vendors.3766682f.js" rel="preload" as="script"><link href="/demo/web/css/chunk-vendors.331f546b.css" rel="stylesheet"><link href="/demo/web/css/app.d5efa62c.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but web3 doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="/demo/web/js/chunk-vendors.3766682f.js"></script><script src="/demo/web/js/app.1be14c7c.js"></script></body></html>
