--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta name="viewport"
     content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>DAA</title>
-  <script type="module" crossorigin src="/assets/index.049b8dcf.js"></script>
-  <link rel="stylesheet" href="/assets/index.17ee40df.css">
+  <script type="module" crossorigin src="/demo/assets/index.049b8dcf.js"></script>
+  <link rel="stylesheet" href="/demo/assets/index.17ee40df.css">
 </head>
 
 <body>
