--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+  <link rel="icon" type="image/svg+xml" href="/demo/favicon.ico" />
   <meta name="viewport"
     content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>DAA</title>
-  <script type="module" crossorigin src="/demo/assets/index.049b8dcf.js"></script>
+  <script type="module" crossorigin src="/demo/assets/index.d3458729.js"></script>
   <link rel="stylesheet" href="/demo/assets/index.17ee40df.css">
 </head>
 
